<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--Data item that holds the reminder details-->
        <variable
            name="reminderDataItem"
            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".locationreminders.ReminderDescriptionActivity">


        <TextView
            android:id="@+id/reminderDetailsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Reminder Details"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reminderTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/reminder_title"
            android:text="@={reminderDataItem.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/reminderDescription"
            app:layout_constraintTop_toBottomOf="@+id/reminderDetailsText" />

        <TextView
            android:id="@+id/reminderDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:hint="@string/reminder_desc"
            android:lines="10"
            android:text="@={reminderDataItem.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@id/reminderTitle" />

        <TextView
            android:id="@+id/selectLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_location"
            android:drawableLeft="@drawable/ic_location"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/reminder_location"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminderDescription" />

        <TextView
            android:id="@+id/selectedLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:text="@{reminderDataItem.location}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/selectLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/selectLocation"
            tools:text="Location" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/reminderTitle" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/description"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/reminderDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>